Fixes #1106 for spacing of setting controls

--- a/src/scss/_display-controls.scss
+++ b/src/scss/_display-controls.scss
@@ -166,6 +166,14 @@
     width: 1px;
   }
 
+  &.qs-option {
+    margin-right: 20px;
+
+    @media screen and (max-width: 730px) {
+      margin-right: 0;
+    }
+  }
+
   &.multiselect_checkbox {
     background-color: $sttm-white;
     border: 1px solid $sttm-light-grey;
